Clearing up SpotBug issues